build: move special-case toolchains into Tup